<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context=".nomor_pertandingan">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:text="@string/nomor_pertandingan"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnMulai"
        android:layout_width="163dp"
        android:layout_height="51dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="266dp"
        android:text="@string/kata"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnKomite"
        android:layout_width="163dp"
        android:layout_height="51dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="353dp"
        android:text="@string/komite"
        android:textSize="20sp" />
</RelativeLayout>