<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context=".Pilih_Tatami">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="154dp"
        android:text="@string/tatami"
        android:textSize="25sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/pilihTatami"
        android:layout_width="163dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="195dp"
        android:layout_marginEnd="100dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/nomor"
        android:inputType="text"
        android:layout_marginRight="100dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="285dp"
        android:text="@string/juri"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/nomor_juri"
        android:layout_width="163dp"
        android:layout_height="51dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="324dp"
        android:backgroundTint="#F5FFFFFF"
        android:entries="@array/nomor_juri"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btnKata"
        android:layout_width="163dp"
        android:layout_height="51dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="426dp"
        android:text="@string/pilih"
        android:textSize="20sp" />

</RelativeLayout>